Mapping class refactoring
- OpensearchSinkConnectorConstants was removed and all constants part of the Mapping class
- Refactor Mapping class to use opensearch client XContentBuilder instead of jackson
- Returned Mapping test